--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Tea Cozy</title>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
+    <!-- Header -->
+
+    <header>
+      <img src="./resources/images/logo.png" alt="logo">
+      <nav>
+        <ul>
+          <a class="mission" target="#mission">Mission</a>
+          <a class="featured" target="#featured">Featured Tea</a>
+          <a class="locations" target="#locations">Locations</a>
+        </ul>
+      </nav>
+    </header>
+
+    <div id="content">
+
+      <!-- Mission -->
+
+      <div id="mission">
+        <div class="center">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <!-- Featured -->
+
+      <div id="featured">
+        <div class="center">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+
+        <div class="image">
+          <img src="./resources/images/berryblitz.jpg" />
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+
+        <div class="image">
+          <img src="./resources/images/spiced-rum.jpg" />
+          <h4>Spiced Rum Tea</h4>
+        </div>
+
+        <div class="image">
+          <img src="./resources/images/donut.jpg" />
+          <h4>Seasonal Donuts</h4>
+        </div>
+
+        <div class="image">
+          <img src="./resources/images/myrtle-ave.jpg" />
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+
+        <div class="image">
+          <img src="./resources/images/bedford-bizarre.jpg" />
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+
+      <!-- Locations -->
+
+      <div id="locations">
+        <h2>Locations</h2>
+        <div class="column">
+          <div class="box">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="box">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="box">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Contact -->
+
+
+    </div>
   </body>
 </html>
