--- a/index.html
+++ b/index.html
@@ -94,7 +94,20 @@
 
       <!-- Contact -->
 
+      <div id="contact">
+        <div class="center">
+          <h2>The Tea Cosy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        <div>
+      </div>
 
-    </div>
+      <!-- Footer -->
+
+      <div id="footer">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+
+  </div>
   </body>
 </html>
