--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img src="./resources/images/logo.png" alt="logo">
       <nav>
         <ul>
-          <a class="mission" target="#mission">Mission</a>
-          <a class="featured" target="#featured">Featured Tea</a>
-          <a class="locations" target="#locations">Locations</a>
+          <a href="#mission">Mission</a>
+          <a href="#featured">Featured Tea</a>
+          <a href="#locations">Locations</a>
         </ul>
       </nav>
     </header>
