--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
       <img src="./resources/images/logo.png" alt="logo">
       <nav>
-        <ul>
+        <span>
           <a href="#mission">Mission</a>
           <a href="#featured">Featured Tea</a>
           <a href="#locations">Locations</a>
-        </ul>
+        </span>
       </nav>
     </header>
 
